erDiagram
    WORKSPACE {
        int Id PK
        string Name
        string Description
    }
    PROJECT {
        int Id PK
        int WorkspaceId FK
        string Name
        string Description
        date StartDate
        date EndDate
    }
    TEAM {
        int Id PK
        int ProjectId FK
        string Name
    }
    TEAM_MEMBER {
        int Id PK
        int TeamId FK
        int UserId FK
    }
    PROJECT_MEMBER {
        int Id PK
        int ProjectId FK
        int UserId FK
        string Role
    }
    SPRINT {
        int Id PK
        int ProjectId FK
        string Name
        date StartDate
        date EndDate
        int Goal
    }
    BACKLOG {
        int Id PK
        int ProjectId FK
        string Name
    }
    USER_STORY {
        int Id PK
        int BacklogId FK
        int ProjectId FK
        string Title
        string Description
        int StoryPoints
    }
    TASK_ITEM {
        int Id PK
        int UserStoryId FK
        string Title
        string Description
        int Estimate
        date StartDate
        date DueDate
        string Status
        string Priority
        string Type
    }
    SUB_TASK_ITEM {
        int Id PK
        int TaskItemId FK
        string Title
        bool IsCompleted
    }
    TASK_ASSIGNMENT {
        int Id PK
        int TaskItemId FK
        int UserId FK
        date AssignedDate
    }
    TASK_DEPENDENCY {
        int Id PK
        int TaskItemId FK
        int DependsOnTaskId FK
        string DependencyType
    }
    SPRINT_TASK {
        int Id PK
        int SprintId FK
        int TaskItemId FK
    }

    WORKSPACE ||--o{ PROJECT : contains
    PROJECT ||--o{ TEAM : has
    PROJECT ||--o{ SPRINT : has
    PROJECT ||--o{ BACKLOG : has
    PROJECT ||--o{ PROJECT_MEMBER : has
    TEAM ||--o{ TEAM_MEMBER : has
    BACKLOG ||--o{ USER_STORY : contains
    USER_STORY ||--o{ TASK_ITEM : contains
    TASK_ITEM ||--o{ SUB_TASK_ITEM : has
    TASK_ITEM ||--o{ TASK_ASSIGNMENT : assigned_to
    TASK_ITEM ||--o{ TASK_DEPENDENCY : depends_on
    SPRINT ||--o{ SPRINT_TASK : contains
